avancement interface utilisateur

--- a/parametre.ini
+++ b/parametre.ini
@@ -1,9 +1,10 @@
 [main]
-largeur = 60
+largeur = 30
 hauteur = 30
-nombre_poisson_initial = 300
-nombre_requin_initial = 120
+nombre_poisson_initial = 150
+nombre_requin_initial = 30
 energie_initiale = 7
 temps_de_reproduction_poisson = 4
 temps_de_reproduction_requin = 5
 gain_energie_par_poisson = 1
+gain_energie_par_requin = 5
